--- a/src-client/index.html
+++ b/src-client/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <app-window></app-window>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script> -->
 </body>
 
 </html>
