--- a/src-client/index.html
+++ b/src-client/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌎 🌏 🌍</title>
+    <title>🌎</title>
 
     <style>
         body {
@@ -27,7 +27,6 @@
 
 <body>
     <app-window></app-window>
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script> -->
 </body>
 
 </html>
